[package]
name = "exo_image2"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.7"
chrono = "0.4.33"
levelfile = { git = "https://github.com/skycloudd/levelfile", version = "0.3.1" }
flate2 = "1.0.28"
image = "0.24.8"
uuid = { version = "1.7.0", features = ["v4"] }
wasm-bindgen = "0.2.91"
getrandom = { version = "0.2.12", features = ["js"] }

[lib]
crate-type = ["cdylib"]
