[package]
name = "exo_image2"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.7"
chrono = "0.4.34"
exolvl = "0.6.0"
flate2 = "1.0.28"
getrandom = { version = "0.2.12", features = ["js"] }
image = "0.24.9"
uuid = { version = "1.7.0", features = ["v4"] }
wasm-bindgen = "0.2.91"

[lib]
crate-type = ["cdylib"]
